css/contacts.css
/* ... */
.edit-overlay {
    box-shadow: var(--boxShadowNuevo);
    position: fixed;
    top: 0;
    left: 0;
    width: 584px;
    height: 100vh;
    background: white;
    transform: translateX(-100%);
    transition: transform 0.3s ease-in-out;
    z-index: 1000;
    border-radius: 0 30px 30px 30px;
    overflow-y: auto;
}

.edit-overlay.slide-in {
    animation: slideLeft 0.125s ease-in forwards;
}


.overlay-header {
    border-radius: 0 30px 0 0;
    background-color: #005DFF;
    color: var(--secondaryColor);
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    position: relative;
    padding: 108px 46px;
    gap: 12px;
    height: 373px;
}

.overlay-header-logo {
    height: 66.48px;
    width: auto;
}

.overlay-header-headline {
    font-size: 48px;
}

.overlay-header-row {
    display: flex;
}

.overlay-header-row-right {
    justify-content: right;
    align-items: center;
}

.overlay-header-row-center {
    justify-content: center;
}

.overlay-content {
    display: flex;
    flex-direction: column;
    max-width: 422px;
    margin: 0 auto;
}

.overlay-content-row {
    display: flex;
}

.overlay {
    position: fixed;
    top: 0;
    right: 0;
    width: 584px;
    height: 100vh;
    background: white;
    transform: translateX(100%);
    transition: transform 125ms ease-in-out;
    z-index: 1000;
    flex-direction: column;
    box-shadow: 0px 0px 4px 0px #00000029;
    overflow-y: auto;
}

.direction-column {
    flex-direction: column;
    align-items: center;
    gap: 12px;
}

.sub-headline {
    font-size: 27px;
}

.contact-circle img {
    height: 64px;
    width: 64px;
}

.overly-bg {
    height: 100vh;
    width: 100vw;
    position: fixed;
    top: 0;
    left: 0;
    background-color: rgba(255, 255, 255, .7);
    z-index: 1000;
    display: none;
}

.overly-add-contact {
    border-radius: 30px 0 30px 30px;
}

.overlay-add-contact-header {
    padding: 91px 46px;
    border-radius: 30px 0 0 0;
}

.overlay-contact-successfully-created {
    box-shadow: 0px 0px 4px 0px #00000026;
    border-radius: 20px;
    background-color: var(--primaryColor);
    color: var(--secondaryColor);
    display: flex;
    position: fixed;
    padding: 23px 17px;
    left: 50%;
    transform: translate(-50%, 0%);
    align-items: center;
    justify-content: center;
    font-size: var(--fontSize-5);
    transition: all 125ms ease-in-out;
    z-index: 1000;
    bottom: -50%;
}

.overly-move-up {
    transform: translate(-50%, 50%);
    bottom: 50%;
}

.active_span:before {
    content: url("/assets/icons/contacts_icon.png");
    background-color: var(--menuHoverColor);
    display: inline-block;
    vertical-align: middle;
    margin-right: 8px;
    align-items: center;
    gap: 8px;
}

.active_span {
    display: flex;
    align-items: center;
}

.contact-info-wrapper.slide-in {
    padding: 72px 0 0 62px;
    flex: 1;
    background-color: var(--secondaryColor);
}

.contact-title-row > h3 {
    font-size: 23px;
}

.contact-title-row {
    padding: 21px 0;
    width: auto;
}

.btn-detail-actions {
    display: none;
}

.error-message {
    color: #ff8190;
    font-size: 13px;
    font-family: "Inter", sans-serif;
}

@media screen and (max-width:1300px) {
    .overlay-profile-sec {
        position: absolute;
        top: 320px;
        left: 50%;
        transform: translate(-50%, 0);
        padding: 0;
        z-index: 100;
    }

    .overlay-header {
        position: relative;
    }

    .overlay-content {
        padding-top: 92px;
    }
}

@media screen and (max-width:1200px) {


    .active_span::before {
        background-color: transparent;
        color: #4589FF !important;
        content: url("/assets/icons/contacts_icon_blue.png");
        margin-right: 0;
    }

    .active_span {
        flex-direction: column;
    }

    .contact_bar {
        padding-left: 0;
    }

    .btn-container {
        position: fixed;
        top: unset;
        right: 24px;
        background-color: transparent;
        padding: 0;
        bottom: 100px;
        z-index: 0;
    }

    .btn-add-contact {
        min-width: unset;
    }

    .btn-add-contact > span {
        display: none;
    }

    .contact_bar {
        padding-bottom: 184px;
    }

    .header {
        position: sticky;
        top: 0;
        z-index: 1000
    }

    .contact-detail {
        position: fixed;
        top: 96px;
        right: 0;
        width: calc(100% - 456px);
        padding-top: 144px;
        padding-left: 24px;
    }

    .btn-add-contact {
        width: 64px;
        height: 64px
    }
}
/* ... */

